# kakerlake

./: BACKUP_INFO.md  BACKUP_STATUS_REPORT.txt  DASHBOARD_KPI_IMPLEMENTATION_STATUS.md  DEUTSCHE_FORMATIERUNG_STATUS.md  FINAL_STATUS_REPORT.md  FINAL_UPGRADE_STATUS.md  INTEGRATION_ANLEITUNG_MODERNE_PDF.md  LÖSUNG_Multi_PDF_Problem.md  MODERNE_PDF_DESIGNS_ERFOLG.md  MODERNE_PDF_FEATURES_ANLEITUNG.md  MODERN_PDF_DESIGN_README.md  PDF_DATENBANK_INTEGRATION_ANLEITUNG.md  PDF_ENHANCEMENT_SUCCESS.md  PDF_PROBLEMS_SOLVED.md  PROBLEM_SOLVED_FIRMENDOKUMENTE.txt  README.md  README_PDF_Enhancement.md  Struktur der App.txt  TXT_PDF_SYSTEM_README.md  Technische Roadmap für das PDF-Ausgabe-System der Photovoltaik-App.md  ZENTRALE_PDF_SYSTEM_ERFOLG.md  admin_panel.py  analysis.py  analysis.py.backup_before_syntax_fix  analysis.py.backup_final_syntax  analysis.py.backup_price_formatting  analysis.py.backup_viz_upgrade  analysis_chart_modern_enhancement.py  analyze_db_direct.py  app_status.py  build_alternative_exe.py  build_debug_exe.py  build_exe.bat  build_exe.py  build_fixed_exe.py  build_installer.bat  build_minimal.py  build_nuitka.py  build_robust_exe.py  build_safe_exe.py  (+208 more)
backup_20250714_0208_multi_offer_working/: README_BACKUP.md  calculations.py  database.py  doc_output.py  gui.py  multi_offer_generator.py
backup_20250714_0236_firmendokumente_debug/: BACKUP_STATUS_REPORT.txt  analysis.py  debug_company_documents_fixed.py  multi_offer_generator.py  pdf_generator.py  test_multi_offer_complete.py
data/: price_matrix.csv
extras/: Skubulatschi.code-workspace  add_company_id_column.py  admin_panel.py  ai_companion.py  ai_models.py  analysis.py  analysis_backup_20250619_223856.py  analyze_pdf_debug.py  analyze_session_state.py  calculations.py  check_lines.py  check_matrix_db.py  construct.yaml  data_input.py  database.py  de.json  debug_integration_snippet.py  debug_pdf_validation.py  demo_pdf_fallback.py  fix_pdf_generation_simple.py  googles.py  gui.py  gui_new.py  local_storage.py  locales.py  make_spec_all.py  (+25 more)
(+103 files in other folders)
