[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omerssolar"
version = "1.0.0"
description = "Solar PV Calculation and Analysis Tool"
readme = "README.md"
authors = [
    {name = "Omer", email = "omer@example.com"}
]
license = {text = "MIT"}
dependencies = [
    "altair",
    "altgraph",
    "attrs",
    "blinker",
    "cachetools",
    "certifi",
    "charset-normalizer",
    "click",
    "colorama",
    "crypto",
    "et_xmlfile",
    "gitdb",
    "idna",
    "Jinja2",
    "jsonschema",
    "jsonschema-specifications",
    "MarkupSafe",
    "Naked",
    "narwhals",
    "numpy",
    "openpyxl",
    "packaging",
    "pefile",
    "protobuf",
    "pyinstaller-hooks-contrib",
    "PyJWT",
    "python-dateutil",
    "pytz",
    "pywin32-ctypes",
    "PyYAML",
    "referencing",
    "requests",
    "rpds-py",
    "shellescape",
    "six",
    "smmap",
    "streamlit",
    "tenacity",
    "toml",
    "toolz",
    "tornado",
    "typing_extensions",
    "tzdata",
    "urllib3",
    "validators",
    "watchdog"
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
omerssolar = "omerssolar.gui:main"

[project.gui-scripts]
OmersSolarDingelDangel = "omerssolar.gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
omerssolar = ["assets/*", "*.json", "*.ico"]
